# mcp_server

./: .env  .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  Cargo.toml  README.md  build.rs
src/: config.rs  main.rs  server.rs
src/engine/: README.md  http.rs  mod.rs
src/prompts/: create_docs.rs  mod.rs
src/resources/: mod.rs
src/tools/: count_lines.rs  mod.rs
